fix: input overlap

--- a/src/component/input.module.scss
+++ b/src/component/input.module.scss
@@ -3,12 +3,11 @@
   background-color: rgba(229, 229, 229, 0.2);
   color: white;
   border: none;
-  font-weight: 500;
 
-  &::placeholder {
-    font-weight: 500;
-    color: rgba($color: #ffffff, $alpha: 0.4);
-  }
+  // &::placeholder {
+  //   font-weight: 500;
+  //   color: rgba($color: #ffffff, $alpha: 0.4);
+  // }
   &.small {
     font-size: 1.875rem;
     height: 6.25rem;
